fix(Dialog): dialog height grows too much on safari

--- a/packages/components/src/components/Dialog/styles/dialog.module.scss
+++ b/packages/components/src/components/Dialog/styles/dialog.module.scss
@@ -17,7 +17,6 @@
     border: var(--line-width) solid var(--line-color);
     z-index: 1;
     max-width: var(--dialog-max-width);
-    height: fit-content;
     min-height: var(--dialog-min-height);
     max-height: calc(100dvh - 10rem);
     overflow: hidden;
